# rules_wire

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
docs/: BUILD.bazel  docs.bzl  providers.md  rules.md
tests/: BUILD.bazel
tests/core/tutorial/: BUILD.bazel  go.mod  go.sum  tutorial_test.go
wire/: BUILD.bazel  def.bzl  deps.bzl
wire/private/: BUILD.bazel  BUILD.wire.bazel  actions.bzl  providers.bzl  release.bzl  repo.bzl  wire_toolchain.bzl  wire_versions.bzl
wire/private/rules/: BUILD.bazel  injector.bzl  release.bzl
wire/private/rules_go/: README.md
wire/private/rules_go/lib/: BUILD.bazel  platforms.bzl  toolchains.bzl
wire/private/skylib/: README.md
wire/private/skylib/lib/: BUILD.bazel
wire/toolchain/: BUILD.bazel  toolchains.bzl
