# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_plezentek_rules_wire//wire:def.bzl", "declare_toolchains", "wire_release")

filegroup(
    name = "wire_command",
    srcs = ["wire{exe}"],
    visibility = ["//visibility:public"],
)

wire_release(
    name = "wire_release",
    goarch = "{goarch}",
    goos = "{goos}",
    root_file = "ROOT",
    wire = "wire{exe}",
    version = "{version}",
)

declare_toolchains(
    host = "{goos}_{goarch}",
    release = ":wire_release",
)
