# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//wire:def.bzl", "wire_injector")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/rules_wire/tests/core/tutorial
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
    "go_test",
)

filegroup(
    name = "tutorial_sources",
    srcs = [
        "main.go",
        "wire.go",
    ],
)

wire_injector(
    name = "tutorial_injector",
    srcs = [
        ":tutorial_sources",
    ],
)

go_library(
    name = "tutorial_library",
    srcs = [
        ":tutorial_injector",
        ":tutorial_sources",
    ],
    importpath = "github.com/plezentek/rules_wire/tests/core/tutorial",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "tutorial_binary",
    embed = [
        ":tutorial_library",
    ],
)

go_test(
    name = "tutorial_test",
    srcs = ["tutorial_test.go"],
    embed = [":tutorial_library"],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "tutorial",
    tests = [
        "tutorial_test",
    ],
)
